service.yml
apiVersion: v1
kind: Service
metadata:
  name: mynode-service
spec:
  selector:
    app: node
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: LoadBalancer
