ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mynode-ingress
spec:
  rules:
  - host: mynodeapp.com
    http:
      paths:
      - backend:
          serviceName: mynode-service
          servicePort: 3000
